# JobAppTracker

./: .env.example  .pre-commit-config.yaml  manage.py  pyproject.toml  setup.sh
JobAppTracker/: asgi.py  settings.py  urls.py  wsgi.py
